<resources>
    <string name="app_name">CanBanAn</string>
    <string name="to_do_list">To do list</string>
    <string name="in_progress">In progress…</string>
    <string name="well_done">Well Done!</string>
    <string name="add_item">Add new Task</string>
    <string name="remove_all_item">Remove all items</string>
    <string name="clear_time_for_all">Clear time for all</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="days">days</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="empty_string">Empty field</string>
    <string name="remove_task">Remove task</string>
    <string name="approach_special_book_reading">Special book reading</string>
    <string name="approach_walking">Walking</string>
    <string name="approach_justification">Approach justification</string>
    <string name="approach_tony_steps">Tony steps</string>
    <string name="approaches_to_fast_resolution">Approaches to fast resolution</string>
    <!--    <string name="move_task_to_category">Move task to category</string>-->
    <!--    <string name="select_category_to_move_in">Select category to move in</string>-->
</resources>
